--- a/templates/form_atividade.html
+++ b/templates/form_atividade.html
@@ -8,14 +8,14 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
-<body>
+<body style='background-color: #f1f0f0;'>
     <form action='/grt/insert_ativ/{{id_gerente}}/{{id_projeto}}' method="post" style="width:400px;
     padding: 40px;
     position: absolute;
     top: 48%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: #f2f2f2;
+    background: #b4b3b3;
     text-align: center;">
         <div class="form-group">
             <label >Nome</label><br>
