--- a/templates/index.html
+++ b/templates/index.html
@@ -4,20 +4,47 @@
     <meta charset="UTF-8">
     <title>Início | Login</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_index1.css') }}">
+    
+    
 </head>
-<body>
+<body style="background:url({{'static/'+'img/back3.png'}});">
 
-    <form action="/login"  method="POST" >
+    <!--<form action="/login"  method="POST" >
         UserName: <br>
         <input type="text" required placeholder="Enter username" name="username"> <br>
         Password: <br>
         <input type="password" name="password" placeholder="Enter password"><br><br>
-        <input type="submit" value="Logar">
-        
-    </form>
+        <input type="submit" value="Logar">       
+    </form>-->
+    <div class="modal-dialog text-center">
+        <div class="col-sm-9 main-section">
+          <div class="modal-content">
+    
+            <div class="col-12 user-img">
+              <img src="{{ url_for('static', filename='img/face.png') }}">
+            </div>
+    
+            <div class="col-12 form-input">
+              <form action="/login"  method="POST">
+                <div class="form-group">
+                    <input type="text" required placeholder="Enter username" name="username">
+                </div>
+                <div class="form-group">
+                    <input type="password" name="password" placeholder="Enter password"><br><br>
+                </div>
+                <button type="submit" class="btn btn-success">Login</button>
+              </form>
+            </div>
+    
+          </div>
+        </div>
+      </div>
 
+    <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/popper.js') }}"></script>
 </body>
 </html>
