--- a/templates/listar_projetos.html
+++ b/templates/listar_projetos.html
@@ -4,31 +4,46 @@
     <meta charset="UTF-8">
     <title>Projetos</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_projetos.css') }}">
 </head>
 <body>
-    <h4>Projetos</h4>
-    <a class="btn btn-primary" href="/" role="button" style="float:right">Sair</a>
-    <table class="table">
-        <tr>
-            <th>Nome</th>
-            <th>Data de Início</th>
-            <th>Data de Término</th>
-            <th></th>
-        </tr>
-        {%for projeto in projetos%}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container"> 
+            <a class="navbar-brand h1 mb-0" href="#">Projetos</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="btn btn-light" id="btn-sair" href="/">Sair</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+    
+    <div class="container">
+        <table class="table">
             <tr>
-                <td>{{projeto[0]}}</td>
-                <td>{{projeto[1]}}</td>
-                <td>{{projeto[2]}}</td>
-
-
-                <td><a href="/grt/dtl/{{id}}/{{projeto[3]}}" target="_self">Detalhes</a></td>
+                <th>Nome</th>
+                <th>Data de Início</th>
+                <th>Data de Término</th>
+                <th></th>
             </tr>
-        {%endfor%}
-        </table>
+            {%for projeto in projetos%}
+                <tr>
+                    <td>{{projeto[0]}}</td>
+                    <td>{{projeto[1]}}</td>
+                    <td>{{projeto[2]}}</td>
 
+
+                    <td><a href="/grt/dtl/{{id}}/{{projeto[3]}}" target="_self">Detalhes</a></td>
+                </tr>
+            {%endfor%}
+            </table>
+        </div>
+
+    <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/popper.js') }}"></script>
 </body>
 </html>
