--- a/templates/listar_projetos.html
+++ b/templates/listar_projetos.html
@@ -6,20 +6,34 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_projetos.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_detalhes.css') }}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container"> 
-            <a class="navbar-brand h1 mb-0" href="#">Projetos</a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="btn btn-light" id="btn-sair" href="/">Sair</a>
-                </li>
 
-            </ul>
-        </div>
-    </nav>
+            <div class="container"> 
+    
+                <a class="navbar-brand h1 mb-0" href="/grt/{{id}}">Projetos</a>
+    
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+    
+                <div class="collapse navbar-collapse" id="navbarSite">
+    
+                    <ul class="navbar-nav">
+                        
+                        <li class="nav-item">
+                            <a class="nav-link h5 mb-0" href="/grt/formProj/{{id}}" role="button">Inserir Projeto</a> 
+                        </li>
+    
+                        <li class="nav-item">
+                            <a class="btn btn-light" id="btn-sair" href="/">Sair</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav> 
     
     <div class="container">
         <table class="table">
