--- a/static/css/style_detalhes.css
+++ b/static/css/style_detalhes.css
@@ -5,6 +5,11 @@ body {background-color: #f1f0f0;}
     right: 11%;
 }
 
+#btn-delete {
+    position: fixed;
+    right: 20%;
+}
+
 .container {
     padding-right: 1px;
     padding-left: 1px;
@@ -18,3 +23,7 @@ body {background-color: #f1f0f0;}
     text-decoration: none;
     color: black;
   }
+
+.btn btn-link {
+    pointer-events: none;
+}  
